infra/k8s/ml-models-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-models-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-models
  template:
    metadata:
      labels:
        app: ml-models
    spec:
      containers:
        - name: ml-models
          image: lukemain/ml-models
---
apiVersion: v1
kind: Service
metadata:
  name: ml-models-srv
spec:
  selector:
    app: ml-models
  ports:
    - name: ml-models
      protocol: TCP
      port: 5050
      targetPort: 5050
