infra/k8s/msa-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-server
  template:
    metadata:
      labels:
        app: msa-server
    spec:
      containers:
        - name: msa-server
          image: lukemain/msa-server
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: msa-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: msa-server
  ports:
    - port: 5000
      targetPort: 5000
