infra/k8s/msa-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-ui
  template:
    metadata:
      labels:
        app: msa-ui
    spec:
      containers:
        - name: msa-ui
          image: lukemain/msa-ui
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: msa-ui-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: msa-ui
  ports:
    - port: 3000
      targetPort: 3000
